s.yaml
apiVersion: v1
kind: Service
metadata:
  name:  service1-service
spec:
  selector:
    app: service1
  ports:
  - name: https
    protocol: TCP
    port: 5124
    targetPort: 5124  # Update to the port you exposed in Docker
    #- name: https
    #protocol: TCP
    #port: 443
    #targetPort: 5123
  type: ClusterIP
